--- a/src/app/my-todo/my-todo.component.html
+++ b/src/app/my-todo/my-todo.component.html
@@ -3,17 +3,22 @@
     <div class="col-md-3">
       <div class="text-center" style="margin-top: 20px;margin-bottom: 0;">
         <h3>
-            My-Todo
+          My-Todo-IV
         </h3>
       </div>
       <div class="text-center">
-        <img src="../../assets/images/{{user.image}}" class="rounded-circle"
-       alt="Cinque Terre" width="200" height="200"> 
+        <img
+          src="../../assets/images/{{ user.image }}"
+          class="rounded-circle"
+          alt="Cinque Terre"
+          width="200"
+          height="200"
+        />
       </div>
       <div class="text-center">
-        {{user?.name}}<br>
-        {{user?.email}}<br>
-        {{user?.address}}
+        {{ user?.name }}<br />
+        {{ user?.email }}<br />
+        {{ user?.address }}
       </div>
     </div>
     <div class="col-md-9">
@@ -26,53 +31,80 @@
             Language
           </tab>
           <tab heading="Settings">
-           <div class="row">
-            <div class="col-md-12">
-              <form  #registerForm="ngForm" (ngSubmit)="addUser(model)">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="form-group">
+            <div class="row">
+              <div class="col-md-12">
+                <form #registerForm="ngForm" (ngSubmit)="addUser(model)">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="form-group">
                         <label for="image">Image</label>
-                        <input type="file" class="form-control" id="image"  (change)="onSelectedImage($event)">
+                        <input
+                          type="file"
+                          class="form-control"
+                          id="image"
+                          (change)="onSelectedImage($event)"
+                        />
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <div class="form-group">
-                      <label for="name">Name</label>
-                      <input type="text" class="form-control" id="name" placeholder="Name"
-                        required name="name" [(ngModel)]="model.name">
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="form-group">
+                        <label for="name">Name</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="name"
+                          placeholder="Name"
+                          required
+                          name="name"
+                          [(ngModel)]="model.name"
+                        />
+                      </div>
                     </div>
                   </div>
-                </div>  
-                  
+
                   <div class="row">
                     <div class="col-md-12">
                       <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email"  placeholder="Email"
-                        required name="email" [(ngModel)]="model.email">
-                    </div>
+                        <input
+                          type="email"
+                          class="form-control"
+                          id="email"
+                          placeholder="Email"
+                          required
+                          name="email"
+                          [(ngModel)]="model.email"
+                        />
+                      </div>
                     </div>
                   </div>
-        
-                   <div class="row">
-                      <div class="col-12"> 
-                        <button type="submit" class="btn btn-primary btn-md" 
-                        [disabled]="!registerForm.valid">Update</button>
-                      </div>
-                   </div> 
-                    </form>
+
+                  <div class="row">
+                    <div class="col-12">
+                      <button
+                        type="submit"
+                        class="btn btn-primary btn-md"
+                        [disabled]="!registerForm.valid"
+                      >
+                        Update
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
             </div>
-           </div>
           </tab>
           <tab heading="Address">
             Address
-            <div #mapContainer id="map"></div><br>
+            <div #mapContainer id="map"></div>
+            <br />
             <div class="row">
               <div class="col-12">
-                <button type="button" class="btn btn-sm btn-primary">&nbsp;&nbsp;&nbsp;&nbsp;Save&nbsp;&nbsp;&nbsp;&nbsp;</button>
+                <button type="button" class="btn btn-sm btn-primary">
+                  &nbsp;&nbsp;&nbsp;&nbsp;Save&nbsp;&nbsp;&nbsp;&nbsp;
+                </button>
               </div>
             </div>
           </tab>
